--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,17 @@ set(NAME_PKT name_pkt.cpp)
 #set(NAME_BUFFER name_buffer.cpp)
 
 
-IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+IF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
     set(CMAKE_CXX_FLAGS "-g -DDEBUG -O0 -Wall -std=c++11 -Wno-unused-variable")
     add_executable(rrpoison ${RRPOISON})
     add_executable(np ${NAME_PKT})
     #add_executable(pb ${PKT_BUFFER})
     #add_executable(nb ${NAME_BUFFER})
+ELSE(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+    set(CMAKE_CXX_FLAGS "-g -DDEBUG -O0 -Wall -std=c++11 -Wno-unused-variable")
+    add_executable(rrpoison ${RRPOISON})
+    add_executable(np ${NAME_PKT})
     TARGET_LINK_LIBRARIES(np resolv)
-ELSEif(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-    set(CMAKE_CXX_FLAGS "-g -DDEBUG -O0 -Wall -std=c++11 -Wno-unused-variable")
-    add_executable(rrpoison ${RRPOISON})
-    add_executable(np ${NAME_PKT})
     #add_executable(pb ${PKT_BUFFER})
     #add_executable(nb ${NAME_BUFFER})
-ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
